  the EditBus as soon as the AWT thread is not busy, and returns immediately.
   (Marcelo Vanzin)

- Added ability to tag classes with EditBus.EBHandler. This is only useful
  when tagging an EditPlugin class, and makes the plugin instance behave
  as if it implemented EBComponent (it's added to the bus when the plugin
  is activated). (Marcelo Vanzin)

- Temporary buffers do not send BufferUpdate.PROPERTIES_CHANGED messages anymore
  (patch #2932330) (Dale Anson)

- RFC edit mode was misplaced in catalog and was never matching anything because
  text edit mode glob was more global and checked first (Matthieu Casanova)

}}}
{{{ Editing

- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Added logtalk.xml mode file (#1945284 - Paulo Moura)

- Added regex.xml mode file (#2782258 - Kevin Hunter)

- Added sip.xml mode file to read sip messages (Matthieu Casanova)

}}}
{{{ Miscellaneous

- Added actions for eating whitespace at word ends in both directions
  for findWordStart. (#1953341 - strank)

- Added a configurable selection foreground color. If set, this color will be
  used for the selection foreground instead of the syntax highlighting color.
  The new option can be set from Global Options -> Text Area.
  (Shlomy Reinstein)

- Implemented feature request #2919875: Namable views. You can now specify a
  name for each view using View -> Set view title. The name is persistent in the
  perspective.xml file.

- In Hypersearchs result panel, the query string length is now limited to 100
  chars by default for display (Matthieu Casanova)

- Applied patch #2887520: Allow filtering the recent file list using file globs,
  e.g. "*.java" or "{*.c,*.h}". (Patch provided by Joerg Spieler)

- New status bar widget design (Matthieu Casanova #1540560)
}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: