@@ -69,6 +69,8 @@ and Marcelo Vanzin for contributing to this release.
 - RFC edit mode was misplaced in catalog and was never matching anything because
   text edit mode glob was more global and checked first (Matthieu Casanova)
 
+- New ping-pong list component org.gjt.sp.jedit.gui.PingPongList
+  (Matthieu Casanova)
 }}}
 {{{ Editing
 
@@ -104,6 +106,8 @@ and Marcelo Vanzin for contributing to this release.
   e.g. "*.java" or "{*.c,*.h}". (Patch provided by Joerg Spieler)
 
 - New status bar widget design (Matthieu Casanova #1540560)
+
+- New Encodings option pane using drag & drop (Matthieu Casanova)
 }}}
 
 }}}
